<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".LoginFragment">

    <GridLayout
        android:id="@+id/loginGrid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="25dp"
        android:columnCount="2">

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20dp"
            android:text="@string/server_host" />

        <EditText
            android:id="@+id/serverHostEditText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20sp"
            android:text="@string/server_port" />

        <EditText
            android:id="@+id/serverPortEditText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20dp"
            android:text="@string/username" />

        <EditText
            android:id="@+id/userNameEditText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20dp"
            android:text="@string/password" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20dp"
            android:text="@string/first_name" />

        <EditText
            android:id="@+id/firstNameEditText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20dp"
            android:text="@string/last_name" />

        <EditText
            android:id="@+id/lastNameEditText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="15dp" />

        <TextView
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:textSize="20dp"
            android:text="@string/gender" />

        <RadioGroup
            android:orientation="horizontal"
            android:id="@+id/genderRadioGroup">
            <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/male"
                android:textSize="15dp"
                android:id="@+id/maleButton"/>
            <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
                android:text="@string/female"
                android:textSize="15dp"
                android:id="@+id/femaleButton"/></RadioGroup>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register" />
    </GridLayout>


</LinearLayout>